refactor: quite a lot of things honestly
