# server/server.go
@@ -1,8 +1,7 @@
-package main
+package server
 
 import (
 	"context"
-	"log"
 
 	"github.com/gin-gonic/gin"
 	"github.com/jackc/pgx/v5/pgxpool"
@@ -12,11 +11,26 @@ import (
 	"github.com/spf13/viper"
 	"go.uber.org/zap"
 
+	"github.com/ScMofeoluwa/minalytics/config"
 	database "github.com/ScMofeoluwa/minalytics/database/sqlc"
 	_ "github.com/ScMofeoluwa/minalytics/docs"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
+
+type Server struct {
+	router *gin.Engine
+	config config.Config
+	logger *zap.Logger
+}
+
+func New(config config.Config, logger *zap.Logger) *Server {
+	return &Server{
+		router: gin.Default(),
+		config: config,
+		logger: logger,
+	}
+}
 
 // @title Minalytics API
 // @version 1.0
@@ -24,65 +38,51 @@ import (
 // @securityDefinitions.apikey BearerAuth
 // @in header
 // @name Authorization
-func main() {
-	logger, err := zap.NewProduction()
-	if err != nil {
-		log.Fatalf("Failed to initialize zap logger: %v", err)
-	}
-	defer logger.Sync()
-
-	viper.SetConfigFile(".env")
-	viper.AutomaticEnv()
-
-	if err := viper.ReadInConfig(); err != nil {
-		logger.Fatal("Error reading config file", zap.Error(err))
-	}
-
+func (s *Server) Start() {
 	goth.UseProviders(google.New(
-		viper.GetString("GOOGLE_CLIENT_ID"),
-		viper.GetString("GOOGLE_CLIENT_SECRET"),
-		viper.GetString("GOOGLE_CLIENT_CALLBACK_URL"),
+		s.config.GoogleClientID,
+		s.config.GoogleClientSecret,
+		s.config.GoogleClientCallbackUrl,
 	),
 	)
 
 	geoDB, err := geoip2.Open("database/GeoLite2-City.mmdb")
 	if err != nil {
-		logger.Fatal("Failed to open GeoIP2 database", zap.Error(err))
+		s.logger.Fatal("Failed to open GeoIP2 database", zap.Error(err))
 	}
 	defer geoDB.Close()
 
 	connPool, err := pgxpool.New(context.Background(), viper.GetString("DATABASE_URL"))
 	if err != nil {
-		logger.Fatal("Failed to create connection pool", zap.Error(err))
+		s.logger.Fatal("Failed to create connection pool", zap.Error(err))
 	}
 	defer connPool.Close()
 
 	if err := connPool.Ping(context.Background()); err != nil {
-		logger.Fatal("Failed to connect to database", zap.Error(err))
+		s.logger.Fatal("Failed to connect to database", zap.Error(err))
 	}
 
 	querier := database.New(connPool)
 	analyticsService := NewAnalyticsService(querier, geoDB)
-	analyticsHandler := NewAnalyticsHandler(analyticsService, logger)
+	analyticsHandler := NewAnalyticsHandler(analyticsService, s.logger)
 
-	r := gin.Default()
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
-	r.GET("/analytics/track", WrapHandler(analyticsHandler.TrackEvent))
+	s.router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+	s.router.GET("/analytics/track", WrapHandler(analyticsHandler.TrackEvent))
 
-	auth := r.Group("auth")
+	auth := s.router.Group("auth")
 	{
 		auth.GET(":provider", analyticsHandler.SignIn)
 		auth.GET(":provider/callback", WrapHandler(analyticsHandler.Callback))
 	}
 
-	apps := r.Group("apps")
+	apps := s.router.Group("apps")
 	apps.Use(JWTMiddleware())
 	{
 		apps.GET("/", WrapHandler(analyticsHandler.GetApps))
 		apps.POST("/", WrapHandler(analyticsHandler.CreateApp))
 	}
 
-	analytics := r.Group("analytics")
+	analytics := s.router.Group("analytics")
 	analytics.Use(JWTMiddleware())
 	analytics.Use(AppAccessMiddleware(analyticsService))
 	{
@@ -96,7 +96,7 @@ func main() {
 		analytics.GET("pageviews", WrapHandler(analyticsHandler.GetPageViews))
 	}
 
-	port := viper.GetString("PORT")
-	log.Printf("listening on port: %s\n", port)
-	r.Run(":" + port)
+	port := s.config.Port
+	s.logger.Info("Starting server", zap.String("port", port))
+	s.router.Run(":" + port)
 }
